# dictate

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEBUGGING.md  README.md  SECURITY.md  UI_SPEC.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dictate/: README.md  __init__.py  __main__.py  cli.py  clipboard.py  config.py  daemon.py  errors.py  hotkey.py  log.py  main.py  recorder.py  requirements.txt  state.py  transcriber.py
dictate/tui/: app.py  footer.py  history.py  status.py
docs/superpowers/plans/: 2026-04-18-cli-replaces-gui.md
docs/superpowers/specs/: 2026-04-18-cli-replaces-gui-design.md
private_dictate/: __init__.py  __main__.py  cli.py  config.py  daemon.py  errors.py  jobs.py  paste.py  paths.py  recorder.py  state.py  transcriber.py
private_dictate/tui/: app.py  footer.py  history.py  settings.py  status.py
scripts/: build-sidecar.sh  test_hotkey_record.py  test_record_and_transcribe.py  test_recorder.py  test_transcriber.py
sidecar/: main.py  recorder.py  requirements.txt  server.py  settings.py  task_queue.py  transcriber.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hotkey.rs  lib.rs  main.rs  sidecar.rs  tray.rs  websocket.rs
src-tauri/src/hotkey/: gnome_fallback.rs  portal.rs
src/components/: SettingsPanel.tsx  StatusBar.tsx  TranscriptionsSync.tsx  WaylandBanner.tsx
src/components/layout/: ContentArea.tsx  Header.tsx  LeftNav.tsx  SaveBar.tsx  SidebarStatus.tsx  Toast.tsx
src/components/screens/: AdvancedScreen.tsx  GeneralScreen.tsx  HistoryScreen.tsx  ModelScreen.tsx
src/components/settings/: AutoPasteToggle.tsx  DeviceSelect.tsx  HotkeyCapture.tsx  LanguageSelect.tsx  ModelSelect.tsx  PathDisplay.tsx  SettingGroup.tsx  SettingRow.tsx  VadToggle.tsx
src/components/transcriptions/: TranscriptionItem.tsx
src/constants/: languages.ts
src/contexts/: SettingsContext.tsx  TranscriptionsContext.tsx
src/hooks/: useAppState.ts  useSettings.ts  useTheme.ts  useTranscriptions.ts
src/lib/: constants.ts  transcriptionStorage.ts  validateLicenseKey.ts
src/types/: index.ts
tests/integration/: _stub_daemon.py  conftest.py  test_daemon_subprocess.py
tests/tui/: test_app.py  test_history_screen.py  test_settings_screen.py  test_status_screen.py
tests/unit/: test_cli.py  test_clipboard.py  test_config.py  test_daemon.py  test_errors.py  test_hotkey.py  test_hotkey_listener.py  test_jobs.py  test_log.py  test_paste.py  test_recorder.py  test_state.py  test_transcriber.py
