[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dictate"
version = "2.0.0.dev0"
description = "Offline, privacy-first speech-to-text with a terminal UI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Geoffrey Byers" }]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[project.scripts]
dictate = "dictate.cli:main"

[tool.setuptools.packages.find]
include = ["dictate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
filterwarnings = ["error"]
