[package]
name = "dictate"
version = "0.1.0"
description = "Privacy-first, offline speech-to-text desktop app powered by Whisper."
edition = "2021"
authors = ["Geoffrey Byers"]
license = "MIT"
repository = "https://github.com/geoffreybyers/dictate"
readme = "../README.md"

[lib]
name = "dictate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
rdev = "0.5"
dark-light = "1"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.10", default-features = false, features = ["tokio"] }
futures-util = "0.3"
zbus = { version = "4", default-features = false, features = ["tokio"] }

